--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="vocal">
             <h3>Clip 6</h3>
             <audio controls>
-                <source src="/vocalet/6.mp3" type="audio/mp3">
+                <source src="../vocalet/6.mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
         </div>
